# garmin-choach

./: .gitignore  API.md  Cargo.toml  README.md  SETUP.md
python_client/: ai_example.py  example.py  requirements.txt
python_client/garmin_data_retriever/: __init__.py  ai_coach.py  client.py  exporter.py
src/: main.rs
